Tuesday, July 22nd, 2003   Ron Steinke <rsteinke@w-link.net>

	* More poly-atlas tweaks. Forgot to inline some wrapper
	  functions, had to add a template AtlasInType constructor
	  to take advantange of the fact that the Atlas::Message::Foo
	  constructor is overloaded (needed that to build Eris).

Tuesday, July 22nd, 2003   Ron Steinke <rsteinke@w-link.net>

	* Changes to support both Atlas-C++ 0.4 and 0.6 with atlasconv.h
	* Changed needless 'const CoordType' for pass-by-value
	  in some Quaternion function calls to 'CoordType'

Tuesday, July 22nd, 2003   Ron Steinke <rsteinke@w-link.net>

	* Fixed a couple more m_valid bugs.

Monday, July 21st, 2003   Al Riddoch <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Use AsNum() rather than AsFloat() so that
	  integers don't cause exceptions.

	* wfmath/quaternion.h: Fix operator=() so it copies m_valid to
	  the assignee.

Thursday, July 3rd, 2003   Al Riddoch <alriddoch@zepler.org>

	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.

Friday, June 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Did a Quaternion-specific implementation of rotation(from, to)
	  instead of just calling the RotMatrix version and
	  converting. Also changed RotMatrix<2>::rotation(from, to)
	  not to throw ColinearVectors in the case where the
	  inputs are antiparallel, since in 2d there's only
	  one possible plane of rotation and we can give
	  a canonical answer.

Tuesday, June 24th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Fixed a bug in RotMatrix::rotation(from, to),
	  added a Quaternion wrapper for the same function

Tuesday, June 3rd, 2003   Ron Steinke <rsteinke@w-link.net>

	* Instantiated Intersect(), Contains() functions
	  and stream operators for dim=2,3 in .cpp files
	* Made most template functions inline, bumped
	  the interface number in case this broke
	  compatibility

Tuesday, May 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Added elements() const accessors to the underlying